causeway-dosx (3.62tk-build20220325-1~@distro@) @distro@; urgency=medium

  * Internal tweaks for CauseWay version number handling.
  * Try to make int 0x21, ah = 0x4a, properly return maximum possible block
    reallocation size.  FIXME.

 -- TK Chia <tkchia@users.noreply.github.com>  Fri, 25 Mar 2022 17:57:46 +0000

causeway-dosx (3.61tk-build20220323-1~@distro@) @distro@; urgency=medium

  * Add a "development branch" field to the CauseWay version number.
  * Make int 0x21, ah = 0x48--0x4a, return sane-looking error codes.

 -- TK Chia <tkchia@users.noreply.github.com>  Wed, 23 Mar 2022 18:53:42 +0000

causeway-dosx (3.60.001tk-build20220216-1~@distro@) @distro@; urgency=medium

  * Make decompressor stub MS-DOS 1.x compliant.

 -- TK Chia <tkchia@users.noreply.github.com>  Wed, 16 Feb 2022 16:46:50 +0000

causeway-dosx (3.60-build20220213-4~@distro@) @distro@; urgency=medium

  * Release.

 -- TK Chia <tkchia@users.noreply.github.com>  Sun, 13 Feb 2022 17:08:36 +0000