@@ -2,7 +2,8 @@ Source: causeway-dosx
 Section: devel
 Priority: optional
 Maintainer: TK Chia <tkchia@users.noreply.github.com>
-Build-Depends: debhelper (>= 9), quilt, gcc (>= 4.5), libc6-dev (>= 2), jwasm
+Build-Depends: debhelper (>= 9), quilt, gcc (>= 4.5), libc6-dev (>= 2), jwasm,
+ jwlink, dosbox
 Standards-Version: 3.9.6
 Homepage: https://github.com/tkchia/causeway
 
